dynamic working and further optimised

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.51 ms ± 163 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.51 ms ± 130 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.06 ms ± 148 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "997 μs ± 137 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.31 ms ± 248 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.35 ms ± 217 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.77 ms ± 169 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.82 ms ± 136 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.4 ms ± 913 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "6.9 ms ± 365 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "be84bd37-84c4-449b-896d-f0d16da25608",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.62 ms ± 232 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.56 ms ± 254 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.2 ms ± 909 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "33.5 ms ± 1.13 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.5 ms ± 1.07 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.7 ms ± 833 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "673 ms ± 18 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "322 ms ± 12.6 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "5c2edd15-2fe8-4b6f-a613-1bb17ec15cdd",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "209 ms ± 7.31 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "211 ms ± 11.7 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.87 s ± 15.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.92 s ± 61.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e2e489616824ca7818dc2d1301e04b9",
+       "model_id": "e8d72a7059bc4857b66d466319d00863",
        "version_major": 2,
        "version_minor": 0
       },
@@ -389,8 +389,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.08 s, sys: 22 ms, total: 4.1 s\n",
-      "Wall time: 4.08 s\n"
+      "CPU times: user 1.74 s, sys: 24 ms, total: 1.76 s\n",
+      "Wall time: 1.75 s\n"
      ]
     }
    ],
@@ -401,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "ba812df6-9781-4686-9952-348242181170",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9035a799540844a8934abae851ea2f34",
+       "model_id": "f0c29cd7581f41178666c71242eb3a1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,8 +423,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 980 ms, sys: 19 ms, total: 999 ms\n",
-      "Wall time: 988 ms\n"
+      "CPU times: user 982 ms, sys: 18 ms, total: 1e+03 ms\n",
+      "Wall time: 992 ms\n"
      ]
     }
    ],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07ff1a0d620a4d1ea0d4e165b7d50f53",
+       "model_id": "78c8ac358b71489cb5bc014e4e75a32c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -556,8 +556,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 13.6 s, sys: 50.1 ms, total: 13.6 s\n",
-      "Wall time: 13.6 s\n"
+      "CPU times: user 5.15 s, sys: 39.1 ms, total: 5.19 s\n",
+      "Wall time: 5.15 s\n"
      ]
     }
    ],
@@ -568,14 +568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "cc45ce33-5c89-4718-acc9-334639a785b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "936feecb6a1b4f91ab151633f3f34d06",
+       "model_id": "85800c0e69d64dcaa929b160a17d2446",
        "version_major": 2,
        "version_minor": 0
       },
@@ -590,7 +590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.47 s, sys: 45 ms, total: 2.51 s\n",
+      "CPU times: user 2.48 s, sys: 36 ms, total: 2.52 s\n",
       "Wall time: 2.5 s\n"
      ]
     }
