--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -59,17 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb814e1-cfb6-4311-b1cb-9195eb0908ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z1h = anjl.heuristic_nj(D1)\n",
-    "Z1h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3a1d1471-825a-452a-918d-2ece876de63d",
    "metadata": {},
    "outputs": [],
@@ -97,7 +86,6 @@
    "outputs": [],
    "source": [
     "print(anjl.to_string(Z1d))\n",
-    "print(anjl.to_string(Z1h))\n",
     "print(anjl.to_string(Z1r))\n",
     "print(anjl.to_string(Z1))"
    ]
@@ -110,21 +98,20 @@
    "outputs": [],
    "source": [
     "figd = anjl.plot(Z1d, marker_size=5, internal_marker_size=5)\n",
-    "figh = anjl.plot(Z1h, marker_size=5, internal_marker_size=5)\n",
     "figr = anjl.plot(Z1r, marker_size=5, internal_marker_size=5)\n",
     "figc = anjl.plot(Z1, marker_size=5, internal_marker_size=5)\n",
-    "figures = [figc, figr, figd, figh]\n",
+    "figures = [figc, figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\", \"Heuristic\"],\n",
-    "    horizontal_spacing=0.01,\n",
-    "    vertical_spacing=0.01,\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=450, width=1300)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
     "fig"
    ]
   },
@@ -233,7 +220,6 @@
    "outputs": [],
    "source": [
     "Z2d = anjl.dynamic_nj(D2)\n",
-    "Z2h = anjl.heuristic_nj(D2)\n",
     "Z2r = anjl.rapid_nj(D2)\n",
     "Z2 = anjl.canonical_nj(D2)"
    ]
@@ -246,7 +232,6 @@
    "outputs": [],
    "source": [
     "print(anjl.to_string(Z2d))\n",
-    "print(anjl.to_string(Z2h))\n",
     "print(anjl.to_string(Z2r))\n",
     "print(anjl.to_string(Z2))"
    ]
@@ -259,21 +244,20 @@
    "outputs": [],
    "source": [
     "figd = anjl.plot(Z2d, marker_size=5, internal_marker_size=5)\n",
-    "figh = anjl.plot(Z2h, marker_size=5, internal_marker_size=5)\n",
     "figr = anjl.plot(Z2r, marker_size=5, internal_marker_size=5)\n",
     "figc = anjl.plot(Z2, marker_size=5, internal_marker_size=5)\n",
-    "figures = [figc, figr, figd, figh]\n",
+    "figures = [figc, figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\", \"Heuristic\"],\n",
-    "    horizontal_spacing=0.01,\n",
-    "    vertical_spacing=0.01,\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=450, width=1300)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
     "fig"
    ]
   },
@@ -307,7 +291,6 @@
    "outputs": [],
    "source": [
     "Z3d = anjl.dynamic_nj(D3)\n",
-    "Z3h = anjl.heuristic_nj(D3)\n",
     "Z3r = anjl.rapid_nj(D3)\n",
     "Z3 = anjl.canonical_nj(D3)"
    ]
@@ -331,21 +314,20 @@
     "    render_mode=\"svg\",\n",
     ")\n",
     "figd = anjl.plot(Z3d, **params3)\n",
-    "figh = anjl.plot(Z3h, **params3)\n",
     "figr = anjl.plot(Z3r, **params3)\n",
     "figc = anjl.plot(Z3, **params3)\n",
-    "figures = [figc, figr, figd, figh]\n",
+    "figures = [figc, figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\", \"Heuristic\"],\n",
-    "    horizontal_spacing=0.01,\n",
-    "    vertical_spacing=0.01,\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=450, width=1300)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
     "fig"
    ]
   },
@@ -358,18 +340,6 @@
    "source": [
     "fig = anjl.plot(Z3d, **params3)\n",
     "fig.update_layout(title=\"Dynamic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e0692c0-82d6-4502-849a-49070fd7bf5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z3h, **params3)\n",
-    "fig.update_layout(title=\"Heuristic\")\n",
     "fig"
    ]
   },
@@ -429,7 +399,6 @@
    "outputs": [],
    "source": [
     "Z4d = anjl.dynamic_nj(D4)\n",
-    "Z4h = anjl.heuristic_nj(D4)\n",
     "Z4r = anjl.rapid_nj(D4)\n",
     "Z4 = anjl.canonical_nj(D4)"
    ]
@@ -454,69 +423,20 @@
     "    render_mode=\"svg\",\n",
     ")\n",
     "figd = anjl.plot(Z4d, **params4)\n",
-    "figh = anjl.plot(Z4h, **params4)\n",
     "figr = anjl.plot(Z4r, **params4)\n",
     "figc = anjl.plot(Z4, **params4)\n",
-    "figures = [figc, figr, figd, figh]\n",
+    "figures = [figc, figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\", \"Heuristic\"],\n",
-    "    horizontal_spacing=0.01,\n",
-    "    vertical_spacing=0.01,\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=450, width=1300)\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfcd2b9a-5836-413f-b666-e830a67190e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z4d, **params4)\n",
-    "fig.update_layout(title=\"Dynamic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8af00c6a-a572-4d0f-8fa4-ef2c15512302",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z4h, **params4)\n",
-    "fig.update_layout(title=\"Heuristic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e756506e-9057-4e7c-aa16-cae0a625b6d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z4r, **params4)\n",
-    "fig.update_layout(title=\"Rapid\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03cee5e1-7bee-4106-ba82-6895f3c0adb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z4, **params4)\n",
-    "fig.update_layout(title=\"Canonical\")\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
     "fig"
    ]
   },
@@ -543,7 +463,6 @@
     "ld5 = ld5.iloc[loc_shuffle].reset_index(drop=True)\n",
     "\n",
     "Z5d = anjl.dynamic_nj(D5)\n",
-    "Z5h = anjl.heuristic_nj(D5)\n",
     "Z5r = anjl.rapid_nj(D5)\n",
     "\n",
     "D5.shape"
@@ -569,56 +488,19 @@
     "    render_mode=\"svg\",\n",
     ")\n",
     "figd = anjl.plot(Z5d, **params5)\n",
-    "figh = anjl.plot(Z5h, **params5)\n",
     "figr = anjl.plot(Z5r, **params5)\n",
-    "figures = [figr, figd, figh]\n",
+    "figures = [figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Rapid\", \"Dynamic\", \"Heuristic\"],\n",
-    "    horizontal_spacing=0.01,\n",
-    "    vertical_spacing=0.01,\n",
+    "    subplot_titles=[\"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=500, width=1300)\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a451cdb-b4bd-4bab-a8b1-8a2b6fd51c1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z5d, **params5)\n",
-    "fig.update_layout(title=\"Dynamic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af1c70b5-aa0f-40eb-a99b-72b44e71e4ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z5h, **params5)\n",
-    "fig.update_layout(title=\"Heuristic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04909da7-011d-40c7-9a1c-b0c0396574fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z5r, **params5)\n",
-    "fig.update_layout(title=\"Rapid\")\n",
+    "fig.update_layout(showlegend=False, height=500, width=900)\n",
     "fig"
    ]
   },
@@ -645,7 +527,6 @@
     "ld6 = ld6.iloc[loc_shuffle].reset_index(drop=True)\n",
     "\n",
     "Z6d = anjl.dynamic_nj(D6)\n",
-    "Z6h = anjl.heuristic_nj(D6)\n",
     "Z6r = anjl.rapid_nj(D6)\n",
     "\n",
     "D6.shape"
@@ -671,56 +552,19 @@
     "    render_mode=\"auto\",\n",
     ")\n",
     "figd = anjl.plot(Z6d, **params6)\n",
-    "figh = anjl.plot(Z6h, **params6)\n",
     "figr = anjl.plot(Z6r, **params6)\n",
-    "figures = [figr, figd, figh]\n",
+    "figures = [figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Rapid\", \"Dynamic\", \"Heuristic\"],\n",
-    "    horizontal_spacing=0.01,\n",
-    "    vertical_spacing=0.01,\n",
+    "    subplot_titles=[\"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=500, width=1300)\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc20d604-53b2-45db-a8e5-80f7f55fa42c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z6d, **params6)\n",
-    "fig.update_layout(title=\"Dynamic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d79582f5-acd8-455f-b7ee-8cdc6d637ce0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z6h, **params6)\n",
-    "fig.update_layout(title=\"Heuristic\")\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eff370a1-0409-4390-ba14-3fc505c4de41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = anjl.plot(Z6r, **params6)\n",
-    "fig.update_layout(title=\"Rapid\")\n",
+    "fig.update_layout(showlegend=False, height=500, width=900)\n",
     "fig"
    ]
   },
